--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Natours Project",
   "main": "app.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
