--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "npm test",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/zessam/Natours-Project/tree/main#readme",
   "dependencies": {
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
