--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "apifeatures",
         "Expressjs",
         "natours",
-        "requestat"
+        "requestat",
+        "virtuals"
     ]
 }
