--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^5.13.22",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
