--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^4.18.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
