--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV='development'
 PORT=8000
 DATABASE=mongodb+srv://zezo:<PASSWORD>@cluster0.kjcpi19.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
