--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/zessam/Natours-Project/tree/main#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^5.13.22",
